# Doc_RoXx

./: README.md  config.yaml  doc.py  pyproject.toml  script.py  todo.md
doc_roxx/: cli.py
doc_roxx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: doc.md  doc_generated.md
example/include/: button.h  led.h
example/src/: LedDashboard.vue  TaskDashboard.vue  TaskManager.cpp  button.cpp  led.cpp  main.cpp
