[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-roxx"
version = "0.1.0"
description = "Générateur de documentation Markdown à partir de blocs de code annotés"
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.scripts]
doc-roxx = "doc_roxx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["doc_roxx*"]
